# AgenticAIPoweredLinuxSystemManagement

./: .env.example  .gitignore  CONTRIBUTING.md  INVARIANTS.md  README.md  SEMANTICS.md  THREAT_MODEL.md  plan.txt  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
src/agentic/: __init__.py  exceptions.py  main.py  pipeline.py
src/agentic/cli/: app.py  output.py  prompts.py
src/agentic/config/: settings.py
src/agentic/engine/: action_registry.py  decision_engine.py
src/agentic/engine/strategies/: base.py  clean_memory.py  (+2 more)
src/agentic/executor/: action_executor.py  command_validator.py  simulation_engine.py  transaction.py
src/agentic/memory/: context.py  migrations.py  models.py  store.py
src/agentic/models/: action.py  capability.py  environment.py  intent.py  policy.py
src/agentic/parser/: intent_parser.py  prompt_templates.py  schemas.py
src/agentic/policy/: capability_gate.py  confidence_gate.py  environment_gate.py  permissions.py  risk_levels.py  safety_gate.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_main.py  test_models.py  test_pipeline.py
tests/test_cli/: test_app.py  test_output.py  test_prompts.py
tests/test_engine/: test_decision_engine.py  test_strategies.py
tests/test_executor/: test_action_executor.py  test_command_validator.py  test_sandbox.py  test_simulation_engine.py  test_transaction.py
tests/test_memory/: test_store.py
tests/test_parser/: test_intent_parser.py
tests/test_policy/: test_capability_gate.py  test_confidence_gate.py  test_environment_gate.py  test_safety_gate.py
(+7 files in other folders)
