[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentic"
version = "0.1.0"
description = "AI-powered Linux system management layer"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12,<1",
    "rich>=13,<14",
    "pydantic>=2,<3",
    "pydantic-settings>=2,<3",
    "openai>=1,<2",
    "psutil>=5,<7",
    "aiosqlite>=0.20,<1",
    "httpx>=0.27,<1",
]

[project.scripts]
agentic = "agentic.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agentic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=agentic --cov-report=term-missing --cov-branch --cov-fail-under=100"

[tool.coverage.run]
source = ["src/agentic"]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
